# MCDF

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSING.md  NOTICE  README.md  imgui.ini  vcpkg.json
.github/workflows/: ci.yml  release.yml
apps/cli/: CMakeLists.txt  main.cpp
apps/studio/: CMakeLists.txt  main.cpp
apps/studio/assets/fonts/: NOTICE.md
apps/studio/core/: studio_core.cpp  studio_core.hpp
apps/studio/include/imfiledialog/: CMakeLists.txt  README.md  imfiledialog.cpp  imfiledialog.h  imfiledialog_util.h
apps/studio/tests/: test_studio_core.cpp
conformance/: GUIDE.md  README.md  errors.md  run.sh
conformance/schemas/: encryption-policy.schema.json  manifest.schema.json  metadata.schema.json  schema.schema.json
conformance/vectors/canonical/manifest/: case.json
conformance/vectors/canonical/manifest/container/: content.md  metadata.yaml
conformance/vectors/canonical/manifest/expected/: manifest.json
conformance/vectors/invalid/bad-algo/: case.json
conformance/vectors/invalid/bad-algo/container/: content.md  manifest.json  metadata.yaml
conformance/vectors/invalid/extra-file/: case.json
conformance/vectors/invalid/extra-file/container/: extra.txt  manifest.json  metadata.yaml
conformance/vectors/invalid/hash-mismatch/: case.json
conformance/vectors/invalid/hash-mismatch/container/: content.md  manifest.json  metadata.yaml
conformance/vectors/invalid/missing-content/: case.json
conformance/vectors/invalid/missing-content/container/: manifest.json  metadata.yaml
conformance/vectors/invalid/policy-unsound/: case.json
conformance/vectors/invalid/policy-unsound/container/: content.md  manifest.json
conformance/vectors/invalid/policy-unsound/container/encryption/: policy.yaml
conformance/vectors/invalid/policy-unsound/container/signatures/: author.sig
conformance/vectors/invalid/required-section-missing/: case.json
conformance/vectors/invalid/required-section-missing/container/: content.md  manifest.json  metadata.yaml  schema.yaml
conformance/vectors/invalid/sig-alg-not-allowed/: case.json
conformance/vectors/invalid/sig-alg-not-allowed/container/: content.md  manifest.json
conformance/vectors/invalid/sig-alg-not-allowed/container/signatures/: author.sig
conformance/vectors/invalid/sig-invalid/: case.json
conformance/vectors/invalid/sig-invalid/container/: content.md  manifest.json
conformance/vectors/invalid/sig-invalid/container/signatures/: author.sig
conformance/vectors/invalid/sig-missing/: case.json
conformance/vectors/invalid/sig-missing/container/: content.md  manifest.json
conformance/vectors/valid/encrypted/: case.json
conformance/vectors/valid/encrypted/container/: content.md  manifest.json
conformance/vectors/valid/encrypted/container/encryption/: policy.yaml
conformance/vectors/valid/encrypted/container/signatures/: author.sig
conformance/vectors/valid/minimal/: case.json
conformance/vectors/valid/minimal/container/: manifest.json  schema.yaml
conformance/vectors/valid/signed/: case.json
conformance/vectors/valid/signed-es256/: case.json
conformance/vectors/valid/signed-es256/container/: content.md  manifest.json
conformance/vectors/valid/signed-es256/container/signatures/: author.sig
conformance/vectors/valid/signed/container/: content.md  manifest.json
conformance/vectors/valid/signed/container/signatures/: author.sig
examples/: README.md  showcase.mcdf
examples/showcase/: audit.checkpoint  content.md  manifest.json  metadata.yaml  schema.yaml
examples/showcase/signatures/: mcdf-project.sig
fuzz/: CMakeLists.txt  driver.hpp  fuzz_markdown.cpp  fuzz_parsers.cpp  fuzz_unpack.cpp
fuzz/corpus/markdown/: content.md
fuzz/corpus/parsers/: metadata.yaml
fuzz/corpus/unpack/: minimal.mcdf
include/mcdf/: error.hpp  mcdf.hpp  version.hpp
include/mcdf/container/: container.hpp  directory_container.hpp  open.hpp  tar.hpp  tar_container.hpp
include/mcdf/core/: audit_ops.hpp  encrypt_ops.hpp  manifest_ops.hpp  pack_ops.hpp  render.hpp  sign_ops.hpp  validate.hpp
include/mcdf/crypto/: aead.hpp  enc_keys.hpp  encoding.hpp  hash.hpp  jws.hpp  keys.hpp
include/mcdf/model/: audit.hpp  document.hpp  encryption_policy.hpp  manifest.hpp  metadata.hpp  schema.hpp
include/mcdf/serialize/: audit_log.hpp  canonical_json.hpp  markdown.hpp  parsers.hpp  policy_yaml.hpp  render.hpp  writers.hpp
scripts/: build-studio-docker.sh
spec/: LICENSE  NOTICE.md  markdown_container_document_format_mcdf_rfc_draft.md
src/: CMakeLists.txt  error.cpp  version.cpp
src/container/: directory_container.cpp  open.cpp  tar.cpp  tar_container.cpp
src/core/: audit_ops.cpp  encrypt_ops.cpp  manifest_ops.cpp  pack_ops.cpp  render.cpp  sign_ops.cpp  validate.cpp
src/crypto/: aead.cpp  enc_keys.cpp  encoding.cpp  hash.cpp  jws.cpp  keys.cpp
src/model/: document.cpp
src/serialize/: audit_log.cpp  canonical_json.cpp  markdown.cpp  parsers.cpp  policy_yaml.cpp  render.cpp  writers.cpp
tests/: CMakeLists.txt  test_audit.cpp  test_canonical_json.cpp  test_crypto.cpp  test_encrypt.cpp  test_inspect.cpp  test_manifest.cpp  test_pack.cpp  test_render.cpp  test_sign.cpp  test_smoke.cpp  test_validate.cpp  test_writers.cpp
tests/fixtures/example.mcdf/: content.md  manifest.json  metadata.yaml  schema.yaml
